# wdm2vst

./: .gitignore  AGENTS.md  ASMRTOP_Install.bat  ASMRTOP_Installer.SED  CLAUDE.md  README.md  VAD_DRIVER_WORK_REPORT.md  WDM2VST_Debug_Guide.html  WORK_SESSION_20260322.md  build_both_brands.bat  build_installer.bat  check_sign.ps1  clean_all_drivers.bat  compile2.txt  copy_driver.bat  deep_disasm.py  deep_disasm2.py  deploy_step2.ps1  deploy_v311.ps1  deploy_v311_fresh.ps1  deploy_v322.ps1  deploy_v323.ps1  deploy_v324.ps1  deploy_vsts.ps1  disasm_x64_output.txt  do_ftp.py  do_ftp2.py  download_ftp.py  edit_ftp_html.py  edit_ftp_upload.py  fix_colors.py  fix_layout.py  ftp_log.txt  gen_cat.bat  get_path.cpp  gh_out.txt  gitlog.txt  install_4ch.bat  installer.sed  installerB.sed  (+39 more)
ASMRTOP_Plugins/: .gitignore  ASMRTOP_Driver_Renamer.py  ASMRTOP_Driver_Renamer.spec  ASMRTOP_Fix_Driver_Names.py  CMakeLists.txt  GrantPermissions.ps1  WDM_DRIVER_ISSUE_REPORT.md  build.bat  build_both.ps1  check_ipc.cpp  check_pins.cpp  check_pins2.cpp  deploy_single_vst3.ps1  ipc_monitor.cpp  out.txt  out2.txt  out3.txt  out_rename2.txt  replace.py  temp_build_helper.cmd  temp_dump.py  temp_dump.txt  temp_fix_names.py  w2v_test.cpp
ASMRTOP_Plugins/Source/: AsmrtopIPC.h  AudioUtils.h  DropdownLookAndFeel.h  Localization.h  ODeusVadBridge.h  P2PTransport.h  PluginBranding.h  QRCode.h  QRCodePopup.h  Recv_PluginEditor.cpp  Recv_PluginEditor.h  Recv_PluginProcessor.cpp  Recv_PluginProcessor.h  Send_PluginEditor.cpp  Send_PluginEditor.h  Send_PluginProcessor.cpp  Send_PluginProcessor.h  TelemetryReporter.h  UpdateChecker.h  V2W_PluginEditor.cpp  V2W_PluginEditor.h  V2W_PluginProcessor.cpp  V2W_PluginProcessor.h  W2V_PluginEditor.cpp  W2V_PluginEditor.h  W2V_PluginProcessor.cpp  W2V_PluginProcessor.h
ASMRTOP_Plugins/WebApp/: index.html  manifest.json
ASMRTOP_Plugins/build_asmrtop/: ALL_BUILD.vcxproj  ASMRTOP_AUDIO_PLUGINS.sln  ASMRTOP_INST_WDM2VST.vcxproj  ASMRTOP_INST_WDM2VST.vcxproj.filters  ASMRTOP_INST_WDM2VST_All.vcxproj  ASMRTOP_INST_WDM2VST_Standalone.vcxproj  ASMRTOP_INST_WDM2VST_Standalone.vcxproj.filters  ASMRTOP_INST_WDM2VST_VST3.vcxproj  ASMRTOP_INST_WDM2VST_rc_lib.vcxproj  ASMRTOP_INST_WDM2VST_rc_lib.vcxproj.filters  ASMRTOP_INST_WDM2VST_vst3_helper.vcxproj  ASMRTOP_RECV.vcxproj  ASMRTOP_RECV.vcxproj.filters  ASMRTOP_RECV_All.vcxproj  ASMRTOP_RECV_All.vcxproj.filters  ASMRTOP_RECV_Standalone.vcxproj  ASMRTOP_RECV_Standalone.vcxproj.filters  ASMRTOP_RECV_VST3.vcxproj  ASMRTOP_RECV_rc_lib.vcxproj  ASMRTOP_RECV_rc_lib.vcxproj.filters  ASMRTOP_RECV_vst3_helper.vcxproj  ASMRTOP_SEND.vcxproj  ASMRTOP_SEND.vcxproj.filters  ASMRTOP_SEND_All.vcxproj  ASMRTOP_SEND_Standalone.vcxproj  ASMRTOP_SEND_Standalone.vcxproj.filters  ASMRTOP_SEND_VST3.vcxproj  ASMRTOP_SEND_rc_lib.vcxproj  ASMRTOP_SEND_rc_lib.vcxproj.filters  ASMRTOP_SEND_vst3_helper.vcxproj  ASMRTOP_SEND_vst3_helper.vcxproj.filters  ASMRTOP_VST2WDM.vcxproj  ASMRTOP_VST2WDM.vcxproj.filters  ASMRTOP_VST2WDM_All.vcxproj  ASMRTOP_VST2WDM_Standalone.vcxproj  ASMRTOP_VST2WDM_Standalone.vcxproj.filters  ASMRTOP_VST2WDM_VST3.vcxproj  ASMRTOP_VST2WDM_rc_lib.vcxproj  ASMRTOP_VST2WDM_rc_lib.vcxproj.filters  ASMRTOP_VST2WDM_vst3_helper.vcxproj  (+15 more)
ASMRTOP_Plugins/build_asmrtop/ASMRTOP_INST_WDM2VST_artefacts/JuceLibraryCode/: ASMRTOP_INST_WDM2VST_resources.rc  Info.txt  JuceHeader.h
ASMRTOP_Plugins/build_asmrtop/ASMRTOP_RECV_artefacts/JuceLibraryCode/: ASMRTOP_RECV_resources.rc  Info.txt  JuceHeader.h
ASMRTOP_Plugins/build_asmrtop/ASMRTOP_SEND_artefacts/JuceLibraryCode/: ASMRTOP_SEND_resources.rc  Info.txt  JuceHeader.h
ASMRTOP_Plugins/build_asmrtop/ASMRTOP_VST2WDM_artefacts/JuceLibraryCode/: ASMRTOP_VST2WDM_resources.rc  Info.txt  JuceHeader.h
ASMRTOP_Plugins/build_asmrtop/ASMRTOP_WDM2VST_artefacts/JuceLibraryCode/: ASMRTOP_WDM2VST_resources.rc  Info.txt  JuceHeader.h
ASMRTOP_Plugins/build_asmrtop/JUCE/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln  cmake_install.cmake
ASMRTOP_Plugins/build_asmrtop/JUCE/modules/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ASMRTOP_Plugins/build_asmrtop/JUCE/tools/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln  (+4 more)
ASMRTOP_Plugins/build_public/: ALL_BUILD.vcxproj  ASMRTOP_AUDIO_PLUGINS.sln  ASMRTOP_INST_WDM2VST.vcxproj  ASMRTOP_INST_WDM2VST.vcxproj.filters  ASMRTOP_INST_WDM2VST_All.vcxproj  ASMRTOP_INST_WDM2VST_Standalone.vcxproj  ASMRTOP_INST_WDM2VST_Standalone.vcxproj.filters  ASMRTOP_INST_WDM2VST_VST3.vcxproj  ASMRTOP_INST_WDM2VST_rc_lib.vcxproj  ASMRTOP_INST_WDM2VST_rc_lib.vcxproj.filters  ASMRTOP_INST_WDM2VST_vst3_helper.vcxproj  ASMRTOP_RECV.vcxproj  ASMRTOP_RECV.vcxproj.filters  ASMRTOP_RECV_All.vcxproj  ASMRTOP_RECV_Standalone.vcxproj  ASMRTOP_RECV_VST3.vcxproj  ASMRTOP_RECV_VST3.vcxproj.filters  ASMRTOP_RECV_rc_lib.vcxproj  ASMRTOP_RECV_rc_lib.vcxproj.filters  ASMRTOP_RECV_vst3_helper.vcxproj  ASMRTOP_SEND.vcxproj  ASMRTOP_SEND.vcxproj.filters  ASMRTOP_SEND_All.vcxproj  ASMRTOP_SEND_Standalone.vcxproj  ASMRTOP_SEND_VST3.vcxproj  ASMRTOP_SEND_VST3.vcxproj.filters  ASMRTOP_SEND_rc_lib.vcxproj  ASMRTOP_SEND_rc_lib.vcxproj.filters  ASMRTOP_SEND_vst3_helper.vcxproj  ASMRTOP_VST2WDM.vcxproj  ASMRTOP_VST2WDM.vcxproj.filters  ASMRTOP_VST2WDM_All.vcxproj  ASMRTOP_VST2WDM_Standalone.vcxproj  ASMRTOP_VST2WDM_Standalone.vcxproj.filters  ASMRTOP_VST2WDM_VST3.vcxproj  ASMRTOP_VST2WDM_rc_lib.vcxproj  ASMRTOP_VST2WDM_rc_lib.vcxproj.filters  ASMRTOP_VST2WDM_vst3_helper.vcxproj  ASMRTOP_WDM2VST.vcxproj  ASMRTOP_WDM2VST.vcxproj.filters  (+14 more)
ASMRTOP_Plugins/build_public/JUCE/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.sln  JUCEExportConfig.cmake  cmake_install.cmake
ASMRTOP_Plugins/docs/: DeveloperGuide.html  DeveloperGuide_CN.html  TechDeepDive.html  TechDeepDive.md  UserManual.html  UserManual_CN.html
ASMRTOP_Plugins/installer/: Clean_ALL_WDM2VST.bat  Setup_ASMRTOP.iss  Setup_PUBLIC.iss  WDM2VST_Setup.iss  generate_art.py
ASMRTOP_Plugins/tools/: multi_output_player.html  multi_player.py
(+268 files in other folders)
